--- a/data/df_creating.ipynb
+++ b/data/df_creating.ipynb
@@ -30,7 +30,7 @@
     "data_table_3 = pd.DataFrame(data_table_3)\n",
     "\n",
     "#save data to csv\n",
-    "data_table_3.to_csv('data/system_load.csv', index=False)"
+    "data_table_3.to_csv('system_load.csv', index=False)"
    ]
   },
   {
@@ -51,24 +51,33 @@
     "data_table_4 = pd.DataFrame(data_table_4)\n",
     "\n",
     "#save data to csv\n",
-    "data_table_4.to_csv('data/load_distribution.csv', index=False)"
+    "data_table_4.to_csv('load_distribution.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "con_generators = pd.read_csv('conventional_generators.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "import random\n",
     "\n",
     "#load the data\n",
-    "demand_othersource = pd.read_csv('data/demands.csv')\n",
+    "demand_othersource = pd.read_csv('demands.csv')\n",
     "node_list = list(demand_othersource['Location [node]'])\n",
     "power_list = list(demand_othersource[' Consumption [MW]'])\n",
     "\n",
     "#load demand\n",
-    "sytem_load = pd.read_csv('data/system_load.csv')\n",
+    "sytem_load = pd.read_csv('system_load.csv')\n",
     "\n",
     "#normalize the demand column\n",
     "sytem_load['System demand (MW) norm'] = sytem_load['System demand (MW)'] / sytem_load['System demand (MW)'].mean()\n",
@@ -83,7 +92,7 @@
     "\n",
     "#save data to csv\n",
     "for i in range(0,len(node_list)):\n",
-    "    demand_dict[i].to_csv('data/demand_bids/demand_node_'+str(i)+'.csv', index=False)"
+    "    demand_dict[i].to_csv('demand_bids/demand_node_'+str(i)+'.csv', index=False)"
    ]
   },
   {
@@ -96,7 +105,7 @@
     "import os\n",
     "\n",
     "# Replace 'your_specific_folder_path' with the path to the folder you are interested in\n",
-    "folder_path = 'data/demand_bids'\n",
+    "folder_path = 'demand_bids'\n",
     "\n",
     "# List all files in the specified folder\n",
     "file_list = os.listdir(folder_path)\n"
@@ -113,7 +122,7 @@
     "for hour in range(0,24):\n",
     "    demand_bids = pd.DataFrame(columns=['Node', 'Quantity (MW)', 'Price ($/MWh)'])\n",
     "    for bid in file_list:\n",
-    "        bid_df = pd.read_csv('data/demand_bids/'+bid)\n",
+    "        bid_df = pd.read_csv('demand_bids/'+bid)\n",
     "        # Data for the new row\n",
     "        new_row = {'Node': bid_df['Node'][hour], 'Quantity (MW)': bid_df['Quantity (MW)'][hour], 'Price ($/MWh)':bid_df['Price ($/MWh)'][hour]}\n",
     "\n",
@@ -121,7 +130,7 @@
     "        # We're using loc to add a row at a specified index\n",
     "        demand_bids.loc[len(demand_bids)] = new_row\n",
     "    #save demand bids\n",
-    "    demand_bids.to_csv('data/demand_bids_hour/demand_hour_'+str(hour)+'.csv', index=False)"
+    "    demand_bids.to_csv('demand_bids_hour/demand_hour_'+str(hour)+'.csv', index=False)"
    ]
   },
   {
@@ -130,11 +139,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "wind_profile = pd.read_csv('data/wind_powerprofile.csv')\n",
+    "wind_profile = pd.read_csv('wind_powerprofile.csv')\n",
     "# multiply all values with 200 except of hour column\n",
     "wind_profile.iloc[:,1:] = wind_profile.iloc[:,1:]*200\n",
     "#save data to csv\n",
-    "wind_profile.to_csv('data/wind_powerprofile_200.csv', index=False)"
+    "wind_profile.to_csv('wind_powerprofile_200.csv', index=False)"
    ]
   }
  ],
