--- a/archive/model2.ipynb
+++ b/archive/model2.ipynb
@@ -286,7 +286,7 @@
     "\n",
     "\n",
     "  # Define the objective function\n",
-    "  @objective(model, Max, sum(demand_bids[d,3] * y[d] for d in 1:D) - sum(con_generation[g,3] * x_con[g] for g in 1:G))\n",
+    "  @objective(model, Max, sum(demand_bids[d,3] * y[d] for d in 1:D) - sum(con_generation[g,3] * x_con[g] for g in 1:G) + sum(dual(BalanceConstraint)))\n",
     "\n",
     "  # Add the constraint for the balance between supply and demand\n",
     "  @constraint(model, BalanceConstraint,  sum(x_con[g] for g in 1:G) + sum(x_wind[w] for w in 1:W) - sum(y[d] for d in 1:D) == 0)\n",
