Working on Task 1

--- a/Task 1/model1.ipynb
+++ b/Task 1/model1.ipynb
@@ -289,6 +289,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#save the duals of the balance constraints to the equilibrium_df\n",
+    "for hour in 1:24\n",
+    "    hour_results = []\n",
+    "\n",
+    "    for node in 1:N\n",
+    "        push!(hour_results, dual(balance[(hour-1)*24+node]))\n",
+    "    end\n",
+    "    push!(equilibrium_df, [hour; hour_results...])\n",
+    "end\n",
+    "\n",
+    "\n",
+    "\n",
+    "#save results to dataframe\n",
+    "CSV.write(\"results/optimization_results_marketprices.csv\", equilibrium_df)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [
@@ -588,15 +611,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.10.0",
+   "display_name": "Julia 1.9.3",
    "language": "julia",
-   "name": "julia-1.10"
+   "name": "julia-1.9"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.10.0"
+   "version": "1.9.3"
   }
  },
  "nbformat": 4,
