--- a/Task4/model4_zonal.ipynb
+++ b/Task4/model4_zonal.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -158,6 +158,24 @@
     "\n",
     "# number of zones\n",
     "Z = size(transmission_lines_zone, 1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#sum the transmission line capacities according to the zones\n",
+    "transmission = zeros(Z, Z)\n",
+    "for i in 1\n",
+    "    for j in 1:L\n",
+    "        a = transmission_lines_zone[j, :zone1]\n",
+    "        b = transmission_lines_zone[j, :zone2]\n",
+    "        transmission[a, b] += transmission_lines[j, :capacity]\n",
+    "        transmission[b, a] += transmission_lines[j, :capacity]\n",
+    "    end\n",
+    "end"
    ]
   },
   {
