two price scheme sucks

--- a/Task5/model5.ipynb
+++ b/Task5/model5.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +328,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(market_price)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -337,17 +346,7 @@
      "text": [
       "10.89"
      ]
-    }
-   ],
-   "source": [
-    "print(market_price)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
+    },
     {
      "data": {
       "text/html": [
@@ -380,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -452,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -489,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -506,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -527,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -563,16 +562,7 @@
     }
    ],
    "source": [
-    "sign = 0\n",
-    "if x_con[1, outage_index[2]] + sum(x_wind_bal)>0\n",
-    "    sign = 1\n",
-    "else\n",
-    "    sign = -1\n",
-    "end\n",
-    "\n",
-    "\n",
     "profit_df_one_price = DataFrame()\n",
-    "\n",
     "\n",
     "# insert the assigned capacity for each generator\n",
     "capacities = []\n",
@@ -581,7 +571,6 @@
     "    push!(capacities, x_con[1,i])\n",
     "end\n",
     "profit_df_one_price[!, :capacities] = capacities\n",
-    "\n",
     "\n",
     "#calculate the profit for each generator\n",
     "day_ahead_revenue = []\n",
@@ -597,7 +586,6 @@
     "    push!(capacity_change, value(x_con_up[i]) - value(x_con_down[i]))\n",
     "end\n",
     "profit_df_one_price[!, :capacity_change] = capacity_change\n",
-    "\n",
     "\n",
     "#calculate the profit for each generator\n",
     "intraday_revenue = []\n",
@@ -630,13 +618,107 @@
     "\n",
     "CSV.write(\"results/profits_model5.csv\", profit_df_one_price)\n",
     "\n",
-    "#pretty_table(profit_df_one_price, backend = Val(:latex))\n",
-    "\n"
+    "#pretty_table(profit_df_one_price, backend = Val(:latex))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12-element Vector{Any}:\n",
+       "  0.0\n",
+       "  0.0\n",
+       "  0.0\n",
+       "  0.0\n",
+       "  0.0\n",
+       " 36.0\n",
+       " 36.0\n",
+       "  0.0\n",
+       " 60.0\n",
+       " 48.0\n",
+       " 72.0\n",
+       "  5.542964862481085"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "sign = 0\n",
+    "if x_con[1, outage_index[2]] + sum(x_wind_bal) > 0\n",
+    "    sign = 1\n",
+    "else\n",
+    "    sign = -1\n",
+    "end\n",
+    "\n",
+    "profit_df_two_price = DataFrame()\n",
+    "\n",
+    "# insert the assigned capacity for each generator\n",
+    "capacities = []\n",
+    "for i in 1:G\n",
+    "    # make array with the assigned capacity\n",
+    "    push!(capacities, x_con[1,i])\n",
+    "end\n",
+    "profit_df_two_price[!, :capacities] = capacities\n",
+    "\n",
+    "#calculate the profit for each generator\n",
+    "day_ahead_revenue = []\n",
+    "for i in 1:G\n",
+    "    push!(day_ahead_revenue,x_con[1,i]* market_price)\n",
+    "end\n",
+    "profit_df_two_price[!, :day_ahead_revenue] = day_ahead_revenue\n",
+    "\n",
+    "# insert the assigned capacity for each generator\n",
+    "capacity_change = []\n",
+    "for i in 1:G\n",
+    "    # make array with the assigned capacity\n",
+    "    push!(capacity_change, value(x_con_up[i]) - value(x_con_down[i]))\n",
+    "end\n",
+    "profit_df_two_price[!, :capacity_change] = capacity_change\n",
+    "\n",
+    "#calculate penalties for each generator\n",
+    "penalties = []\n",
+    "if sign > 0\n",
+    "    #charge only the the outage generator\n",
+    "    for i in 1:G\n",
+    "        if i == outage_index[2]\n",
+    "            push!(penalties, x_con[1, outage_index[2]] * market_price)\n",
+    "        else\n",
+    "            push!(penalties, 0)\n",
+    "        end\n",
+    "    end\n",
+    "    profit_df_two_price[!, :penalties] = penalties\n",
+    "else\n",
+    "    for i in 1:G\n",
+    "        push!(penalties, (value(x_con_up[i]) - value(x_con_down[i])) * (dual(BalanceConstraint) - 0.13*con_generation[i,3]))\n",
+    "    end\n",
+    "    profit_df_two_price[!, :penalties] = penalties\n",
+    "end\n",
+    "\n",
+    "#calculate the revenue under a two price regime\n",
+    "if sign > 0\n",
+    "    intraday_revenue = []\n",
+    "    for i in 1:G\n",
+    "        push!(intraday_revenue, (value(x_con_up[i]) - value(x_con_down[i])) * dual(BalanceConstraint))\n",
+    "    end\n",
+    "    profit_df_two_price[!, :intraday_revenue] = intraday_revenue\n",
+    "else\n",
+    "    intraday_revenue = []\n",
+    "    for i in 1:G\n",
+    "        push!(intraday_revenue, (value(x_con_up[i]) - value(x_con_down[i])) * (dual(BalanceConstraint) - 0.13*con_generation[i,3]))\n",
+    "    end\n",
+    "    profit_df_two_price[!, :intraday_revenue] = intraday_revenue\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
