--- a/Task5/model5.ipynb
+++ b/Task5/model5.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 404,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 405,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 406,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 407,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
       "\u001b[1m Row \u001b[0m│\u001b[1m x_con1  \u001b[0m\u001b[1m x_con2  \u001b[0m\u001b[1m x_con3  \u001b[0m\u001b[1m x_con4  \u001b[0m\u001b[1m x_con5  \u001b[0m\u001b[1m x_con6  \u001b[0m\u001b[1m x_con7  \u001b[0m\u001b[1m x_con8  \u001b[0m\u001b[1m x_con9  \u001b[0m\u001b[1m x_con10 \u001b[0m\u001b[1m x_con11 \u001b[0m\u001b[1m x_con12 \u001b[0m\n",
       "     │\u001b[90m Float64 \u001b[0m\u001b[90m Float64 \u001b[0m\u001b[90m Float64 \u001b[0m\u001b[90m Float64 \u001b[0m\u001b[90m Float64 \u001b[0m\u001b[90m Float64 \u001b[0m\u001b[90m Float64 \u001b[0m\u001b[90m Float64 \u001b[0m\u001b[90m Float64 \u001b[0m\u001b[90m Float64 \u001b[0m\u001b[90m Float64 \u001b[0m\u001b[90m Float64 \u001b[0m\n",
       "─────┼────────────────────────────────────────────────────────────────────────────────────────────────────────────\n",
-      "   1 │     0.0      0.0      0.0      0.0      0.0    108.5    108.5    280.0    280.0    210.0    217.0  100.411"
+      "   1 │     0.0      0.0      0.0      0.0      0.0    108.5    108.5    280.0    280.0    210.0    217.0  168.132"
      ]
     }
    ],
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 408,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -143,8 +143,10 @@
     "random_number = rand(1:length(x_con_list))\n",
     "# get the index of the x_con_list_indexindex\n",
     "outage_index = x_con_list_index[random_number]\n",
+    "\n",
+    "outage_number = 8\n",
     "# give the column name of the x_con\n",
-    "outage_generator = x_con_names[outage_index[2]]\n",
+    "outage_generator = x_con_names[outage_number]\n",
     "\n",
     "# get wind generatorion differences\n",
     "x_wind_bal = []\n",
@@ -162,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 409,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 410,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 411,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 412,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 413,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 414,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -436,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 415,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 416,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 417,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -515,7 +517,7 @@
       "   9 │ 280.0             3049.2             0                -0.0     60.0            718.74                 3767.94  5.47            1859.8   1908.14\n",
       "  10 │ 210.0             2286.9             0                -0.0     48.0            574.992                2861.89  7.0             1806.0   1055.89\n",
       "  11 │ 217.0             2363.13            0                -0.0     72.0            862.488                3225.62  10.52           3040.28   185.338\n",
-      "  12 │ 100.411           1093.48            0                -0.0     5.54296         66.3992                1159.88  10.89           1153.84     6.03629"
+      "  12 │ 168.132           1830.95            0                -0.0     5.54296         66.3992                1897.35  10.89           1891.32     6.03629"
      ]
     },
     {
@@ -615,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 418,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -700,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 419,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -719,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 420,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -741,7 +743,7 @@
       "   9 │ 280.0             3049.2             0                -0.0     60.0            718.74                 3767.94  5.47            1859.8   1908.14\n",
       "  10 │ 210.0             2286.9             0                -0.0     48.0            574.992                2861.89  7.0             1806.0   1055.89\n",
       "  11 │ 217.0             2363.13            0                -0.0     72.0            862.488                3225.62  10.52           3040.28   185.338\n",
-      "  12 │ 100.411           1093.48            0                -0.0     5.54296         66.3992                1159.88  10.89           1153.84     6.03629"
+      "  12 │ 168.132           1830.95            0                -0.0     5.54296         66.3992                1897.35  10.89           1891.32     6.03629"
      ]
     },
     {
@@ -845,7 +847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 421,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
