--- a/Task5/model5.ipynb
+++ b/Task5/model5.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#load cost data\n",
+    "con_generation = CSV.File(\"../data/conventional_generators.csv\") |> DataFrame\n",
+    "\n",
+    "#load wind_technicaldata\n",
+    "wind_generation = CSV.File(\"../data/wind_farms.csv\") |> DataFrame\n",
+    "\n",
+    "# load wind profile\n",
+    "wind_profile = CSV.File(\"../data/wind_powerprofile_200.csv\") |> DataFrame\n",
+    "\n",
+    "print(con_generation)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -50,33 +68,7 @@
       "   9 │                       9               21                     5.47                        5.53                          4.97          280.0                                                60                                                  60           280           280            240           280           280            240         280         280          240\n",
       "  10 │                      10               22                     7.0                         8.0                           6.0           210.0                                                48                                                  48           300           300            240           300           300            240         300         300          240\n",
       "  11 │                      11               23                    10.52                        3.45                          2.52          217.0                                                72                                                  72           180           180            248           180           180            248         180         180          248\n",
-      "  12 │                      12               23                    10.89                        5.11                          2.89          245.0                                                48                                                  48           240           240            280           240           240            280         240         240          280"
-     ]
-    }
-   ],
-   "source": [
-    "#load cost data\n",
-    "con_generation = CSV.File(\"../data/conventional_generators.csv\") |> DataFrame\n",
-    "\n",
-    "#load wind_technicaldata\n",
-    "wind_generation = CSV.File(\"../data/wind_farms.csv\") |> DataFrame\n",
-    "\n",
-    "# load wind profile\n",
-    "wind_profile = CSV.File(\"../data/wind_powerprofile_200.csv\") |> DataFrame\n",
-    "\n",
-    "print(con_generation)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[1m1×12 DataFrame\u001b[0m\n",
+      "  12 │                      12               23                    10.89                        5.11                          2.89          245.0                                                48                                                  48           240           240            280           240           240            280         240         240          280\u001b[1m1×12 DataFrame\u001b[0m\n",
       "\u001b[1m Row \u001b[0m│\u001b[1m x_con1  \u001b[0m\u001b[1m x_con2  \u001b[0m\u001b[1m x_con3  \u001b[0m\u001b[1m x_con4  \u001b[0m\u001b[1m x_con5  \u001b[0m\u001b[1m x_con6  \u001b[0m\u001b[1m x_con7  \u001b[0m\u001b[1m x_con8  \u001b[0m\u001b[1m x_con9  \u001b[0m\u001b[1m x_con10 \u001b[0m\u001b[1m x_con11 \u001b[0m\u001b[1m x_con12 \u001b[0m\n",
       "     │\u001b[90m Float64 \u001b[0m\u001b[90m Float64 \u001b[0m\u001b[90m Float64 \u001b[0m\u001b[90m Float64 \u001b[0m\u001b[90m Float64 \u001b[0m\u001b[90m Float64 \u001b[0m\u001b[90m Float64 \u001b[0m\u001b[90m Float64 \u001b[0m\u001b[90m Float64 \u001b[0m\u001b[90m Float64 \u001b[0m\u001b[90m Float64 \u001b[0m\u001b[90m Float64 \u001b[0m\n",
       "─────┼────────────────────────────────────────────────────────────────────────────────────────────────────────────\n",
@@ -110,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -357,16 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(market_price)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +358,17 @@
      "text": [
       "10.89"
      ]
-    },
+    }
+   ],
+   "source": [
+    "print(market_price)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
     {
      "data": {
       "text/html": [
@@ -408,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -444,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -501,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -623,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -708,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -727,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -853,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
