--- a/Task6/plot_generator_model6.ipynb
+++ b/Task6/plot_generator_model6.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +269,7 @@
        "23    24      7.000000   1669.815000 -1.065814e-14   1669.815000"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -581,7 +581,7 @@
        "23    24      7.000000   1669.815000  5.062617e-15   1669.815000"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -594,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -622,7 +622,10 @@
     "ax.set_ylabel('Price ($/MWh)')\n",
     "ax.legend(loc='center left', bbox_to_anchor=(1.1, 0.5))\n",
     "\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n",
+    "#save plot\n",
+    "fig.savefig('results/market_prices_with_reserve_market.png', bbox_inches='tight')"
    ]
   }
  ],
