prices are ready

--- a/Assignment 2/Data/price_handling.ipynb
+++ b/Assignment 2/Data/price_handling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +418,7 @@
        "[8760 rows x 20 columns]"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,136 +462,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 102,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th>8</th>\n",
-       "      <th>Dänemark 1 [€/MWh]</th>\n",
-       "      <th>Date</th>\n",
-       "      <th>hour</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2.01</td>\n",
-       "      <td>2023-01-01</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1.38</td>\n",
-       "      <td>2023-01-01</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0.09</td>\n",
-       "      <td>2023-01-01</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0.08</td>\n",
-       "      <td>2023-01-01</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0.05</td>\n",
-       "      <td>2023-01-01</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8755</th>\n",
-       "      <td>39.64</td>\n",
-       "      <td>2023-12-31</td>\n",
-       "      <td>19</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8756</th>\n",
-       "      <td>34.89</td>\n",
-       "      <td>2023-12-31</td>\n",
-       "      <td>20</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8757</th>\n",
-       "      <td>29.6</td>\n",
-       "      <td>2023-12-31</td>\n",
-       "      <td>21</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8758</th>\n",
-       "      <td>28.67</td>\n",
-       "      <td>2023-12-31</td>\n",
-       "      <td>22</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8759</th>\n",
-       "      <td>26.87</td>\n",
-       "      <td>2023-12-31</td>\n",
-       "      <td>23</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>8760 rows × 3 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "8    Dänemark 1 [€/MWh]        Date  hour\n",
-       "0                  2.01  2023-01-01     0\n",
-       "1                  1.38  2023-01-01     1\n",
-       "2                  0.09  2023-01-01     2\n",
-       "3                  0.08  2023-01-01     3\n",
-       "4                  0.05  2023-01-01     4\n",
-       "...                 ...         ...   ...\n",
-       "8755              39.64  2023-12-31    19\n",
-       "8756              34.89  2023-12-31    20\n",
-       "8757               29.6  2023-12-31    21\n",
-       "8758              28.67  2023-12-31    22\n",
-       "8759              26.87  2023-12-31    23\n",
-       "\n",
-       "[8760 rows x 3 columns]"
-      ]
-     },
-     "execution_count": 91,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "prices"
+    "prices.rename(columns={'Dänemark 1 [€/MWh]': 'price'}, inplace=True)\n",
+    "#change order of columns\n",
+    "prices = prices[['Date', 'hour', 'price']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
