--- a/Assignment 2/Data/price_handling.ipynb
+++ b/Assignment 2/Data/price_handling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +418,7 @@
        "[8760 rows x 20 columns]"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -435,14 +435,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "#change Datum to datetime format\n",
-    "prices['Date'] = pd.to_datetime(prices['Datum'], format='%d.%m.%Y')\n",
+    "prices['date'] = pd.to_datetime(prices['Datum'], format='%d.%m.%Y')\n",
     "#drop the hour part of date column\n",
-    "prices['Date'] = prices['Date'].dt.date\n",
+    "prices['date'] = prices['date'].dt.date\n",
     "\n",
     "#get the first half of the string in Anfang column\n",
     "prices['hour'] = prices['Anfang'].str.split(':').str[0].astype(int)\n",
@@ -462,18 +462,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "prices.rename(columns={'Dänemark 1 [€/MWh]': 'price'}, inplace=True)\n",
     "#change order of columns\n",
-    "prices = prices[['Date', 'hour', 'price']]"
+    "prices = prices[['date', 'hour', 'price']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
