wind and new folder

--- a/Assignment2/data/data_treatment.ipynb
+++ b/Assignment2/data/data_treatment.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -91,66 +91,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "# save as csv\n",
-    "wind.to_csv('wind_power_cleaned.csv', index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "# Add a column with the day and the hour, starting from 01/01/2023 00:00\n",
-    "wind['Date'] = pd.date_range(start='01/01/2023 00:00', periods=len(wind), freq='H')\n",
-    "\n",
-    "# Change the order of the columns\n",
-    "cols = wind.columns.tolist()\n",
-    "cols = cols[-1:] + cols[:-1]\n",
-    "wind = wind[cols]\n",
-    "\n",
-    "# Change the name of the second column to 'Wind power'\n",
-    "wind = wind.rename(columns={wind.columns[1]: 'Wind power'})\n",
-    "\n",
-    "# show the tail of the data\n",
-    "print(wind.tail())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
-     "ename": "UndefVarError",
-     "evalue": "UndefVarError: `pd` not defined",
-     "output_type": "error",
-     "traceback": [
-      "UndefVarError: `pd` not defined\n",
-      "\n",
-      "Stacktrace:\n",
-      " [1] top-level scope\n",
-      "   @ ~/Desktop/46755 Renewables in electricity markets/renewables_in_electricity_markets/Assignment2/data_treatment.ipynb:2"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  Start time UTC   wind power  hour\n",
+      "0     2023-01-01  3558.065000     0\n",
+      "1     2023-01-01  3635.240000     1\n",
+      "2     2023-01-01  3627.525000     2\n",
+      "3     2023-01-01  3503.089999     3\n",
+      "4     2023-01-01  3352.544999     4\n"
      ]
     }
    ],
    "source": [
-    "# Create a new dataframe with wind scenarios of 24 hours for 20 days equally spaced in the year\n",
-    "wind_scenarios = pd.DataFrame()\n",
-    "for i in range(0, len(wind), 18*24):  # the step corresponds to 18 days of 24 hours, because we have around 18 intervals of 20 days in one year\n",
-    "    push!(wind_scenarios, wind.iloc[i:i+24])\n",
+    "# drop time from start time UTC\n",
+    "wind['Start time UTC'] = pd.to_datetime(wind['Start time UTC'], format = '%Y-%m-%d %H:%M:%S')\n",
     "\n",
-    "# print the dataframe\n",
-    "print(wind_scenarios)\n",
+    "#drop time from start time UTC\n",
+    "wind['Start time UTC'] = wind['Start time UTC'].dt.date\n",
     "\n",
+    "# put column hour into int\n",
+    "wind['hour'] = wind['hour'].astype(int)\n",
     "\n",
+    "# drop columns month and day\n",
+    "wind.drop(columns=['month', 'day'], inplace=True)\n",
+    "\n",
+    "# print the head of the wind DataFrame\n",
+    "print(wind.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# rename the column 'Start time UTC' to 'date'\n",
+    "wind.rename(columns={'Start time UTC': 'date'}, inplace=True)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "         date  hour   wind power\n",
+      "0  2023-01-01     0  3558.065000\n",
+      "1  2023-01-01     1  3635.240000\n",
+      "2  2023-01-01     2  3627.525000\n",
+      "3  2023-01-01     3  3503.089999\n",
+      "4  2023-01-01     4  3352.544999\n"
+     ]
+    }
+   ],
+   "source": [
+    "# change the order of column wind power and hour\n",
+    "wind = wind[['date', 'hour', 'wind power']]\n",
+    "# print the head of the wind DataFrame\n",
+    "print(wind.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save as csv\n",
+    "wind.to_csv('wind_power_cleaned.csv', index=False)"
    ]
   }
  ],
