--- a/Assignment2/data/data_treatment.ipynb
+++ b/Assignment2/data/data_treatment.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,32 +137,139 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "         date  hour   wind power\n",
-      "0  2023-01-01     0  3558.065000\n",
-      "1  2023-01-01     1  3635.240000\n",
-      "2  2023-01-01     2  3627.525000\n",
-      "3  2023-01-01     3  3503.089999\n",
-      "4  2023-01-01     4  3352.544999\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>hour</th>\n",
+       "      <th>wind power</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2023-01-01</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3558.065000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2023-01-01</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3635.240000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2023-01-01</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3627.525000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2023-01-01</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3503.089999</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2023-01-01</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3352.544999</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8750</th>\n",
+       "      <td>2023-12-31</td>\n",
+       "      <td>19</td>\n",
+       "      <td>2838.484999</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8751</th>\n",
+       "      <td>2023-12-31</td>\n",
+       "      <td>20</td>\n",
+       "      <td>2577.199999</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8752</th>\n",
+       "      <td>2023-12-31</td>\n",
+       "      <td>21</td>\n",
+       "      <td>2252.700000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8753</th>\n",
+       "      <td>2023-12-31</td>\n",
+       "      <td>22</td>\n",
+       "      <td>2157.600000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8754</th>\n",
+       "      <td>2023-12-31</td>\n",
+       "      <td>23</td>\n",
+       "      <td>2252.700000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>8755 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            date  hour   wind power\n",
+       "0     2023-01-01     0  3558.065000\n",
+       "1     2023-01-01     1  3635.240000\n",
+       "2     2023-01-01     2  3627.525000\n",
+       "3     2023-01-01     3  3503.089999\n",
+       "4     2023-01-01     4  3352.544999\n",
+       "...          ...   ...          ...\n",
+       "8750  2023-12-31    19  2838.484999\n",
+       "8751  2023-12-31    20  2577.199999\n",
+       "8752  2023-12-31    21  2252.700000\n",
+       "8753  2023-12-31    22  2157.600000\n",
+       "8754  2023-12-31    23  2252.700000\n",
+       "\n",
+       "[8755 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# change the order of column wind power and hour\n",
     "wind = wind[['date', 'hour', 'wind power']]\n",
     "# print the head of the wind DataFrame\n",
-    "print(wind.head())"
+    "wind"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +294,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.1"
   }
  },
  "nbformat": 4,
